--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -5,6 +5,7 @@ on:
     branches: [ "v2", "v3" ]
   pull_request:
     branches: [ "v2", "v3" ]
+  workflow_dispatch:
 
 permissions:
   contents: read
